fixed layout issues and a few bugs

--- a/src/App.css
+++ b/src/App.css
@@ -26,19 +26,23 @@ h1{
 	grid-template-areas:
 		"head head head"
 		"settings prog comp";
-	height:100%
+	height:100%;
+	overflow:hidden;
 }
 
 @media screen and (max-width: 900px) {
 	.App {
 		grid-template-columns: 1fr;
-		grid-template-rows: auto auto 1fr 1fr;
+		grid-template-rows: auto 1fr 1fr;
 		grid-template-areas:
 			"head"
-			"settings"
 			"prog"
 			"comp";
 	} 
+	#settings{
+		display:none;
+		padding: 5px;
+	}
 }
 
 
@@ -54,6 +58,10 @@ h1{
 
 #right_editor{
 	grid-area: comp;
+}
+
+.editor_host{
+	overflow:hidden;
 }
 
 #settings{
